--- a/card.html
+++ b/card.html
@@ -144,107 +144,65 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Каталог</h1>
+                    <h1>Искусственный газон</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
-        <div class="main-flex-catalog">
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog1.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Бесшовное резиновое покрытие</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала
-                            позволяет
-                            выкладывать дорожки во дворах многоквартирных домов и на
-                            частной территории и другие площадки.
-                        </p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+        <div class="good-main-desk">
+            <div class="fixed-images-good">
+                <img src="images/gazon.jpg" title="Искусственный газон" alt="Искусственный газон">
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/rulon.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="category.html">Рулонные резиновые покрытия</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
-                            связующего,
-                            позволяющего получать высокую прочность сцепления резиновых гранул.</p>
-                    </div>
-                </div>
-                <a href="category.html" class="page-btn">Перейти</a>
+            <div class="overlay-block"></div>
+            <div class="text-images-good">
+                <p>Предлагаем купить искусственный газон — специальное покрытие, имитирующее обычную траву, но более
+                    долговечное и удобное. Разные виды рулонных газонов используются на детских площадках, частных
+                    участках,
+                    общественных пространствах и спортивных сооружениях.</p>
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog10.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Искусственный газон</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Специальное покрытие, имитирующее обычную траву, но более долговечное и удобное.</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Подробнее</a>
+
+        </div>
+        <div class="good-item-page">
+            <div class="good-item-page-img">
+                <img src="images/gazon.jpg" title="Искусственный газон" alt="Искусственный газон">
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog11.jpg"></a>
+            <div class="good-item-description">
+                <div class="cart-tab-property">
+                    <div class="cart-tab-property-title">
+                        Характеристика искусственных газонов
                     </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Резиновая крошка ЭПДМ</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Подробнее</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog12.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Резиновая плитка</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
+                    <div class="cart-tab-property-number">
+                        <p>Из всех видов покрытий спортивная искусственная трава отличается наибольшей прочностью,
+                            долговечностью и износостойкостью к истиранию. Она используется на полях для гольфа,
+                            тренировочных площадках, футбольных аренах. Для дачи, детской площадки или частного участка
+                            такая плотность искусственного газона не требуется. Здесь лучше подойдет более мягкий газон.
+                            Он менее стоек, но и степень изнашивания в таких местах ниже.</p>
+
+                        <p>Удобнее всего настилается газон в рулонах. Для небольших площадей подойдет газон из отдельных
+                            плиток, но срок службы короче, так как места стыков могут расходиться из-за смещения плиток
+                            при таянии снега и льда весной, после обильных дождей. Рулонный газон меньше страдает в
+                            таких ситуациях. В целом, плетеное основание для искусственной травы достаточно подвижно и
+                            позволяет газону приспособиться к особенностям рельефа участка.</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog13.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Полиуретановое связующее</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Разновидность однокомпонентного полиуретанового клея, обладающего определёнными
-                            физико-химическими свойствами.</p>
-                    </div>
+                <div class="cart-tab-property line-catalog-price">
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Купить
+                        в один клик</button>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
             </div>
         </div>
+
+        <h2 class="title-page-item">Как выбрать искусственный газон</h2>
+        <p>Искусственные газоны различаются по назначению и характеристикам. По видам они подразделяются на:</p>
+        <ul class="list-goods-page">
+            <li><i class="fa-solid fa-circle-check"></i> декоративные покрытия;</li>
+            <li><i class="fa-solid fa-circle-check"></i> профессиональные высокопрочные газоны.</li>
+        </ul>
+        <p>Искусственная трава представляет собой полотно с ворсом (в рулонах или плитках) различного цвета, от
+            травяного до ярко-зеленого. Рулонный газон для спортивных площадок отличается высокой плотностью ворса и
+            наличием двух слоев — базового короткого и более длинного, декоративного. При интенсивном использовании
+            высокий ворс истирается быстрее, но плотная основа не позволяет образовываться разрывам в покрытии.</p>
         <div class="title-page-item">
             <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
                 консультацию</button>
