--- a/index.html
+++ b/index.html
@@ -13,46 +13,40 @@
         <div class="pages__project">Проект сайта Азбука покрытий</div>
         <div class="pages__title">Готовность по проекту</div>
         <ul class="pages__list">
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="azbuka46.html" target="_blank">
                     <span class="pages__name">Главная страница</span>
                     <span class="pages__href">azbuka46.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="catalog.html" target="_blank">
                     <span class="pages__name">Каталог</span>
                     <span class="pages__href">catalog.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="category.html" target="_blank">
                     <span class="pages__name">Категория</span>
                     <span class="pages__href">category.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="card.html" target="_blank">
                     <span class="pages__name">Карточка товара</span>
                     <span class="pages__href">card.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="about.html" target="_blank">
                     <span class="pages__name">О нас</span>
                     <span class="pages__href">about.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="contacts.html" target="_blank">
                     <span class="pages__name">Контакты</span>
                     <span class="pages__href">contacts.html</span>
-                </a>
-            </li>
-            <li class="pages__item pages__item_red">
-                <a href="basket.html" target="_blank">
-                    <span class="pages__name">Корзина</span>
-                    <span class="pages__href">basket.html</span>
                 </a>
             </li>
             <li class="pages__item pages__item_red">
