--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="pages__href">contacts.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="example.html" target="_blank">
                     <span class="pages__name">Примеры объектов</span>
                     <span class="pages__href">example.html</span>
