--- a/card.html
+++ b/card.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Искусственный газон</h1>
+                    <h1>Бесшовное покрытие из резиновой крошки СБР, ЭПДМ(EPDM)</h1>
                 </div>
             </header>
         </div>
@@ -153,56 +153,339 @@
         <div class="good-main-desk">
             <div class="overlay-block"></div>
             <div class="text-images-good">
-                <p>Предлагаем купить искусственный газон — специальное покрытие, имитирующее обычную траву, но более
-                    долговечное и удобное. Разные виды рулонных газонов используются на детских площадках, частных
-                    участках,
-                    общественных пространствах и спортивных сооружениях.</p>
+                <p>Открытые спортивные и детские площадки, теннисные корты, пешеходные дорожки, отмостки, территории
+                    около водоёмов и бассейнов, объекты животноводства, складские помещения и гаражные боксы — далеко не
+                    весь список объектов, на которых можно встретить подобное напольное покрытие.
+
+                <p>Высокая прочность материала позволяет выкладывать дорожки во дворах многоквартирных домов и на
+                    частной территории, а также выстилать открытые террасы и другие площадки.</p>
+
+                <p>Такие покрытия применяются в разных промышленных отраслях, дорожном строительстве. Резиновое
+                    бесшовное покрытие используют для устройства тротуаров или прокладки дорожного полотна, где сырье из
+                    покрышек применяют в качестве одного из компонентов асфальта.</p>
             </div>
 
         </div>
-        <div class="good-item-page">
+        <div class="good-item-pages">
             <div class="good-item-page-img">
-                <img src="images/gazon.jpg" title="Искусственный газон" alt="Искусственный газон">
+                <img src="images/catalog1.jpg" title="Искусственный газон" alt="Искусственный газон">
             </div>
-            <div class="good-item-description">
-                <div class="cart-tab-property">
-                    <div class="cart-tab-property-title">
-                        Характеристика искусственных газонов
-                    </div>
-                    <div class="cart-tab-property-number">
-                        <p>Из всех видов покрытий спортивная искусственная трава отличается наибольшей прочностью,
-                            долговечностью и износостойкостью к истиранию. Она используется на полях для гольфа,
-                            тренировочных площадках, футбольных аренах. Для дачи, детской площадки или частного участка
-                            такая плотность искусственного газона не требуется. Здесь лучше подойдет более мягкий газон.
-                            Он менее стоек, но и степень изнашивания в таких местах ниже.</p>
+            <div class="cart-tab-property-title">
+                Характеристика искусственных газонов
+            </div>
+            <div class="cart-tab-property-number list-goods-page">
+                <p><i class="fa-solid fa-circle-check"></i> Материал обладает антикоррозийными свойствами и
+                    может применять на открытом воздухе, не опасаясь негативных воздействий окружающей среды.
+                </p>
+                <p><i class="fa-solid fa-circle-check"></i>Правильный монтаж обеспечивает долговременный срок
+                    службы — свыше 10 лет.</p>
 
-                        <p>Удобнее всего настилается газон в рулонах. Для небольших площадей подойдет газон из отдельных
-                            плиток, но срок службы короче, так как места стыков могут расходиться из-за смещения плиток
-                            при таянии снега и льда весной, после обильных дождей. Рулонный газон меньше страдает в
-                            таких ситуациях. В целом, плетеное основание для искусственной травы достаточно подвижно и
-                            позволяет газону приспособиться к особенностям рельефа участка.</p>
-                    </div>
-                </div>
-                <div class="cart-tab-property line-catalog-price">
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Купить
-                        в один клик</button>
-                </div>
+                <p><i class="fa-solid fa-circle-check"></i>Широкая сфера применения делает этот материал
+                    довольно популярным.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Материал обладает высокой прочностью и
+                    износостойкостью. Резина в его составе делает его устойчивым к механическим воздействиям —
+                    поломать или порвать его довольно сложно.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Пол обладает оригинальным, привлекательным внешним
+                    видом, благодаря приятным оттенкам и их разнообразию.</p>
+                <p><i class="fa-solid fa-circle-check"></i> Резина неприхотлива в уходе. Удалить загрязнения из
+                    пористой структуры можно при помощи напора воды.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Лицевой слой изделий не нуждается в дополнительной
+                    защите.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Покрытие не подвержено деформациям и изменению
+                    размера.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Резиновый пол обладает отличными амортизирующими
+                    свойствами — он может смягчить удар при падении, сделать ходьбу или бег комфортными и
+                    безопасными.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Поглощает шум, популярно в помещениях с высокой
+                    проходимостью, спортзалах и детских развлекательных центрах.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Материал устойчив к воздействию химических реагентов,
+                    растворителям, бензину, техническим маслам, щелочам и кислотам, поэтому такие полы
+                    устраивают в гаражах, автомастерских и в складских помещениях.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Электроизоляционные свойства изделий позволяют
+                    применять их на производстве, где высок риск поражения электрическим током.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Изготовить покрытие из резиновой крошки своими руками
+                    под силу любому человеку.</p>
+                <p><i class="fa-solid fa-circle-check"></i>Высокая ремонтопригодность позволяет производить
+                    быструю замену повреждённого участка.</p>
+            </div>
+            <div class="cart-tab-property line-catalog-price">
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Купить
+                    в один клик</button>
             </div>
         </div>
+        <div class="clearfix"></div>
 
-        <h2 class="title-page-item">Как выбрать искусственный газон</h2>
+        <h2 class="title-page-item">Прайс-лист</h2>
         <p>Искусственные газоны различаются по назначению и характеристикам. По видам они подразделяются на:</p>
-        <ul class="list-goods-page">
-            <li><i class="fa-solid fa-circle-check"></i> декоративные покрытия;</li>
-            <li><i class="fa-solid fa-circle-check"></i> профессиональные высокопрочные газоны.</li>
-        </ul>
-        <p>Искусственная трава представляет собой полотно с ворсом (в рулонах или плитках) различного цвета, от
-            травяного до ярко-зеленого. Рулонный газон для спортивных площадок отличается высокой плотностью ворса и
-            наличием двух слоев — базового короткого и более длинного, декоративного. При интенсивном использовании
-            высокий ворс истирается быстрее, но плотная основа не позволяет образовываться разрывам в покрытии.</p>
+        <div class="table-mobile-scroll">
+            <table class="table-price">
+                <tbody>
+                    <tr>
+                        <td>Толщина и вид покрытия (мм)</td>
+                        <td colspan="5">Цена руб./м2*</td>
+                    </tr>
+                    <tr>
+                        <td>Standard — Однослойное неокрашенное покрытие из черной резиновой крошки</td>
+                        <td>До 100 м2</td>
+                        <td>от 100 м2</td>
+                        <td>от 250 м2</td>
+                        <td>от 750 м2</td>
+                        <td>от 1000 м2</td>
+                    </tr>
+                    <tr>
+                        <td>10мм.</td>
+                        <td>1400</td>
+                        <td>1300</td>
+                        <td>1290</td>
+                        <td>1250</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>15мм.</td>
+                        <td>1800</td>
+                        <td>1700</td>
+                        <td>1600</td>
+                        <td>1580</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>20мм.</td>
+                        <td>2200</td>
+                        <td>2100</td>
+                        <td>2000</td>
+                        <td>1900</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>30мм.</td>
+                        <td>2900</td>
+                        <td>2799</td>
+                        <td>2699</td>
+                        <td>2599</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>Classic — Однослойное окрашенное покрытие из черной резиновой крошки с красящим пигментом
+                        </td>
+                        <td>До 100 м2</td>
+                        <td>от 100 м2</td>
+                        <td>от 250 м2</td>
+                        <td>от 750 м2</td>
+                        <td>от 1000 м2</td>
+                    </tr>
+                    <tr>
+                        <td>10мм.</td>
+                        <td>1500</td>
+                        <td>1400</td>
+                        <td>1350</td>
+                        <td>1320</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>15мм.</td>
+                        <td>1900</td>
+                        <td>1800</td>
+                        <td>1700</td>
+                        <td>1650</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>20мм.</td>
+                        <td>2300</td>
+                        <td>2200</td>
+                        <td>2100</td>
+                        <td>2000</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>30мм.</td>
+                        <td>3000</td>
+                        <td>2900</td>
+                        <td>2800</td>
+                        <td>2749</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>Comfort — Двухслойное покрытие (сэндвич) из черной резиновой крошки с полноцветным EPDM и
+                            повышенной яркостью цвета с износостойкостью</td>
+                        <td>До 100 м2</td>
+                        <td>от 100 м2</td>
+                        <td>от 250 м2</td>
+                        <td>от 750 м2</td>
+                        <td>от 1000 м2</td>
+                    </tr>
+                    <tr>
+                        <td>10+10мм.</td>
+                        <td>3000</td>
+                        <td>2900</td>
+                        <td>2870</td>
+                        <td>2850</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>15+10мм.</td>
+                        <td>3370</td>
+                        <td>3300</td>
+                        <td>3249</td>
+                        <td>3200</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>20+10мм.</td>
+                        <td>3700</td>
+                        <td>3650</td>
+                        <td>3599</td>
+                        <td>3569</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>Premium — Однослойное каучуковое покрытие из полноцветной крошки EPDM с повышенной яркостью
+                            цвета с износостойкостью</td>
+                        <td>До 100 м2</td>
+                        <td>от 100 м2</td>
+                        <td>от 250 м2</td>
+                        <td>от 750 м2</td>
+                        <td>от 1000 м2</td>
+                    </tr>
+                    <tr>
+                        <td>10мм.</td>
+                        <td>2200</td>
+                        <td>2100</td>
+                        <td>2000</td>
+                        <td>1900</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>15мм.</td>
+                        <td>3100</td>
+                        <td>3000</td>
+                        <td>2900</td>
+                        <td>2800</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>20мм.</td>
+                        <td>3900</td>
+                        <td>3800</td>
+                        <td>3700</td>
+                        <td>3600</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>30мм.</td>
+                        <td>5600</td>
+                        <td>5500</td>
+                        <td>5400</td>
+                        <td>5300</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td colspan="6">
+                            <p>*Цена указана в рублях за работы по устройству напольного покрытия 1м2, включая
+                                необходимые
+                                расходные материалы..</p>
+                            <p>*Размер скидки зависит от объема работ на каждом конкретном участке работы.</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <div class="title-page-item">
             <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
                 консультацию</button>
+        </div>
+        <h2 class="title-page-item">Примеры работ</h2>
+        <div class="portfolio-page-block">
+            <div class="portfolio-block-item">
+                <a href="images/croshka1.jpg" data-fancybox="gallery">
+                    <img src="images/croshka1.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka2.jpg" data-fancybox="gallery">
+                    <img src="images/croshka2.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka3.jpg" data-fancybox="gallery">
+                    <img src="images/croshka3.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka4.jpg" data-fancybox="gallery">
+                    <img src="images/croshka4.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka5.jpg" data-fancybox="gallery">
+                    <img src="images/croshka5.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka6.jpg" data-fancybox="gallery">
+                    <img src="images/croshka6.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka7.jpg" data-fancybox="gallery">
+                    <img src="images/croshka7.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka8.jpg" data-fancybox="gallery">
+                    <img src="images/croshka8.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka9.jpg" data-fancybox="gallery">
+                    <img src="images/croshka9.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka10.jpg" data-fancybox="gallery">
+                    <img src="images/croshka10.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka11.jpg" data-fancybox="gallery">
+                    <img src="images/croshka11.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka12.jpg" data-fancybox="gallery">
+                    <img src="images/croshka12.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka13.png" data-fancybox="gallery">
+                    <img src="images/croshka13.png" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka14.jpg" data-fancybox="gallery">
+                    <img src="images/croshka14.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka15.jpg" data-fancybox="gallery">
+                    <img src="images/croshka15.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka16.jpg" data-fancybox="gallery">
+                    <img src="images/croshka16.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka17.jpg" data-fancybox="gallery">
+                    <img src="images/croshka17.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/croshka18.jpg" data-fancybox="gallery">
+                    <img src="images/croshka18.jpg" alt="">
+                </a>
+            </div>
         </div>
     </section>
 
