--- a/card.html
+++ b/card.html
@@ -208,7 +208,7 @@
                 <p><i class="fa-solid fa-circle-check"></i>Высокая ремонтопригодность позволяет производить
                     быструю замену повреждённого участка.</p>
             </div>
-            <div class="cart-tab-property line-catalog-price">
+            <div class="cart-tab-property title-page-item">
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Купить
                     в один клик</button>
             </div>
