--- a/azbuka46.html
+++ b/azbuka46.html
@@ -172,7 +172,7 @@
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/rulon.jpg"></a>
+                        <a href="category.html"><img alt="" src="images/rulon.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
                         <a href="category.html">Рулонные резиновые покрытия</a>
