--- a/example.html
+++ b/example.html
@@ -230,6 +230,77 @@
                     <img src="images/kids5.jpg" alt="">
                 </a>
             </div>
+            <div class="portfolio-block-item">
+                <a href="images/kids6.jpg" data-fancybox="gallery">
+                    <img src="images/kids6.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/kids7.jpg" data-fancybox="gallery">
+                    <img src="images/kids7.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="portfolio-block-item">
+                <a href="images/kids8.jpg" data-fancybox="gallery">
+                    <img src="images/kids8.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="portfolio-block-item">
+                <a href="images/kids9.jpg" data-fancybox="gallery">
+                    <img src="images/kids9.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="portfolio-block-item">
+                <a href="images/kids10.jpg" data-fancybox="gallery">
+                    <img src="images/kids10.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <h2 class="title-page-item">Дом и участок</h2>
+        <div class="portfolio-page-block">
+            <div class="portfolio-block-item">
+                <a href="images/home1.jpg" data-fancybox="gallery">
+                    <img src="images/home1.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home2.jpg" data-fancybox="gallery">
+                    <img src="images/home2.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home3.jpg" data-fancybox="gallery">
+                    <img src="images/home3.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home4.jpg" data-fancybox="gallery">
+                    <img src="images/home4.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home5.jpg" data-fancybox="gallery">
+                    <img src="images/home5.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home6.jpg" data-fancybox="gallery">
+                    <img src="images/home6.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home7.jpg" data-fancybox="gallery">
+                    <img src="images/home7.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/home8.jpg" data-fancybox="gallery">
+                    <img src="images/home8.jpg" alt="">
+                </a>
+            </div>
         </div>
         <h2 class="title-page-item">Промышленные объекты</h2>
         <div class="portfolio-page-block">
@@ -251,24 +322,6 @@
             <div class="portfolio-block-item">
                 <a href="images/prom4.jpg" data-fancybox="gallery">
                     <img src="images/prom4.jpg" alt="">
-                </a>
-            </div>
-        </div>
-        <h2 class="title-page-item">Дом и участок</h2>
-        <div class="portfolio-page-block">
-            <div class="portfolio-block-item">
-                <a href="images/home1.jpg" data-fancybox="gallery">
-                    <img src="images/home1.jpg" alt="">
-                </a>
-            </div>
-            <div class="portfolio-block-item">
-                <a href="images/home2.jpg" data-fancybox="gallery">
-                    <img src="images/home2.jpg" alt="">
-                </a>
-            </div>
-            <div class="portfolio-block-item">
-                <a href="images/home3.jpg" data-fancybox="gallery">
-                    <img src="images/home3.jpg" alt="">
                 </a>
             </div>
         </div>
