--- a/card.html
+++ b/card.html
@@ -171,7 +171,7 @@
                 <img src="images/catalog1.jpg" title="Искусственный газон" alt="Искусственный газон">
             </div>
             <div class="cart-tab-property-title">
-                Характеристика искусственных газонов
+                Характеристика бесшовного резинового покрытия
             </div>
             <div class="cart-tab-property-number list-goods-page">
                 <p><i class="fa-solid fa-circle-check"></i> Материал обладает антикоррозийными свойствами и
