--- a/card.html
+++ b/card.html
@@ -236,8 +236,8 @@
                         <td>10мм.</td>
                         <td>1400</td>
                         <td>1300</td>
-                        <td>1290</td>
                         <td>1250</td>
+                        <td>1200</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
@@ -245,23 +245,23 @@
                         <td>1800</td>
                         <td>1700</td>
                         <td>1600</td>
-                        <td>1580</td>
+                        <td>1500</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
                         <td>20мм.</td>
-                        <td>2200</td>
-                        <td>2100</td>
                         <td>2000</td>
                         <td>1900</td>
+                        <td>1800</td>
+                        <td>1700</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
                         <td>30мм.</td>
-                        <td>2900</td>
-                        <td>2799</td>
-                        <td>2699</td>
-                        <td>2599</td>
+                        <td>2300</td>
+                        <td>2200</td>
+                        <td>2100</td>
+                        <td>2000</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
@@ -278,15 +278,15 @@
                         <td>1500</td>
                         <td>1400</td>
                         <td>1350</td>
-                        <td>1320</td>
+                        <td>1300</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
                         <td>15мм.</td>
-                        <td>1900</td>
+                        <td>2000</td>
                         <td>1800</td>
                         <td>1700</td>
-                        <td>1650</td>
+                        <td>1600</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
@@ -299,10 +299,10 @@
                     </tr>
                     <tr>
                         <td>30мм.</td>
-                        <td>3000</td>
                         <td>2900</td>
-                        <td>2800</td>
-                        <td>2749</td>
+                        <td>2799</td>
+                        <td>2699</td>
+                        <td>2599</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
@@ -316,26 +316,26 @@
                     </tr>
                     <tr>
                         <td>10+10мм.</td>
-                        <td>3000</td>
-                        <td>2900</td>
-                        <td>2870</td>
-                        <td>2850</td>
-                        <td>договорная</td>
-                    </tr>
-                    <tr>
-                        <td>15+10мм.</td>
-                        <td>3370</td>
-                        <td>3300</td>
-                        <td>3249</td>
-                        <td>3200</td>
+                        <td>4000</td>
+                        <td>3800</td>
+                        <td>3600</td>
+                        <td>2400</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
                         <td>20+10мм.</td>
-                        <td>3700</td>
-                        <td>3650</td>
-                        <td>3599</td>
-                        <td>3569</td>
+                        <td>4500</td>
+                        <td>4000</td>
+                        <td>3800</td>
+                        <td>3600</td>
+                        <td>договорная</td>
+                    </tr>
+                    <tr>
+                        <td>30+10мм.</td>
+                        <td>5000</td>
+                        <td>4800</td>
+                        <td>4500</td>
+                        <td>4200</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
@@ -349,10 +349,10 @@
                     </tr>
                     <tr>
                         <td>10мм.</td>
+                        <td>2500</td>
+                        <td>2400</td>
+                        <td>2300</td>
                         <td>2200</td>
-                        <td>2100</td>
-                        <td>2000</td>
-                        <td>1900</td>
                         <td>договорная</td>
                     </tr>
                     <tr>
@@ -383,7 +383,7 @@
                         <td colspan="6">
                             <p>*Цена указана в рублях за работы по устройству напольного покрытия 1м2, включая
                                 необходимые
-                                расходные материалы..</p>
+                                расходные материалы.</p>
                             <p>*Размер скидки зависит от объема работ на каждом конкретном участке работы.</p>
                         </td>
                     </tr>
