--- a/category.html
+++ b/category.html
@@ -172,8 +172,7 @@
                             позволяющего получать высокую прочность сцепления резиновых гранул.</p>
                     </div>
                 </div>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
+                <a href="#" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -188,8 +187,7 @@
                             регенератной резиновой крошки (не более 50 %).</p>
                     </div>
                 </div>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
+                <a href="#" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -204,8 +202,7 @@
                             каучука ЭПДМ (TPV).</p>
                     </div>
                 </div>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
+                <a href="#" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -220,8 +217,7 @@
                             (не менее 15%).</p>
                     </div>
                 </div>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
+                <a href="#" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -236,8 +232,7 @@
                             крошки, нижний слой - из черной регенератной резиновой крошки.</p>
                     </div>
                 </div>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
+                <a href="#" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -251,8 +246,7 @@
                         <p>Цветное плотное напольное покрытие на основе регенератной резиновой крошки</p>
                     </div>
                 </div>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
+                <a href="#" class="page-btn">Перейти</a>
             </div>
         </div>
     </section>
