--- a/epdm.html
+++ b/epdm.html
@@ -144,202 +144,64 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Азбука покрытий | Напольные покрытия от производителя</h1>
+                    <h1>ЭПДМ гранулят</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
-        <div class="main-flex-catalog">
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog1.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Бесшовное резиновое покрытие</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала
-                            позволяет
-                            выкладывать дорожки во дворах многоквартирных домов и на
-                            частной территории и другие площадки.
-                        </p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+        <div class="good-main-desk">
+            <div class="overlay-block"></div>
+            <div class="text-images-good">
+                <p>Предлагаем купить резиновую крошку — ЭПДМ гранулят. Это конструкционный материал, обладающий
+                    уникальным свойством, способностью к большим обратимым деформациям (эластичностью). Широко
+                    используется при устройстве покрытий детских площадок, спортивных площадок, покрытий ледовых
+                    дворцов, стадионов, фитнес-клубов.</p>
+
+                <p>Этилен-пропиленовые каучуки — это синтетические эластомеры. Международное обозначение EPDM. Содержат
+                    40-70 мол. % этиленовых звеньев. Выпускают также тройные сополимеры (СКЭПТ) с 1-2 мол. % диена,
+                    например 2-этилиден-5-норборнена, дициклопентадиена.</p>
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="category.html"><img alt="" src="images/rulon.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="category.html">Рулонные резиновые покрытия</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
-                            связующего,
-                            позволяющего получать высокую прочность сцепления резиновых гранул.</p>
-                    </div>
-                </div>
-                <a href="category.html" class="page-btn">Перейти</a>
+
+        </div>
+        <div class="good-item-pages">
+            <div class="good-item-page-img">
+                <img src="images/catalog11.jpg" title="ЭПДМ гранулят" alt="ЭПДМ гранулят">
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog10.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Искусственный газон</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Специальное покрытие, имитирующее обычную траву, но более долговечное и удобное.</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Подробнее</a>
+            <div class="cart-tab-property-title">
+                Преимущества
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="croshka.html"><img alt="" src="images/catalog11.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="croshka.html">Резиновая крошка</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
-                    </div>
+            <div class="cart-tab-property-number list-goods-page">
+                <p><i class="fa-solid fa-circle-check"></i> Эстетичный внешний вид,
+                </p>
+                <p><i class="fa-solid fa-circle-check"></i> Не токсичен,</p>
+
+                <p><i class="fa-solid fa-circle-check"></i> Возможно изготовление любого цвета,</p>
+                <p><i class="fa-solid fa-circle-check"></i> Травмобезопасен,</p>
+                <p><i class="fa-solid fa-circle-check"></i> Большой температурный интервал сохранения эластичности,</p>
+                <p><i class="fa-solid fa-circle-check"></i> Сопротивление истиранию,</p>
+                <p><i class="fa-solid fa-circle-check"></i> Стойкость к атмосферному старению и выцветанию,</p>
+                <p><i class="fa-solid fa-circle-check"></i> Стойкость к воздействию соленой воды.</p>
+
+                <div class="cart-tab-property-title">
+                    Технические характеристики
                 </div>
-                <a href="croshka.html" class="page-btn">Подробнее</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog12.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Резиновая плитка</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog13.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">Полиуретановое связующее</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Разновидность однокомпонентного полиуретанового клея, обладающего определёнными
-                            физико-химическими свойствами.</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+                <p><i class="fa-solid fa-circle-check"></i> Содержание каучука не менее 20 %</p>
+                <p><i class="fa-solid fa-circle-check"></i> Предел прочности на разрыв- не менее 4 мПа</p>
+                <p><i class="fa-solid fa-circle-check"></i> Относительное удлинение при разрыве- не менее 480%</p>
+                <p><i class="fa-solid fa-circle-check"></i> Относительная плотность- не более 1600 кг/куб. м.</p>
+                <p><i class="fa-solid fa-circle-check"></i> Насыпная плотность — не более 700 гр/л</p>
             </div>
         </div>
+        <div class="clearfix"></div>
+
+
         <div class="title-page-item">
             <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
                 консультацию</button>
         </div>
-    </section>
-    <section class="gray-block">
-        <div class="container">
-            <h3>Партнёрство с нами в 3 шага</h3>
-            <div class="partners-flex">
-                <div class="partners-flex-item">
-                    <span>1</span>
-                    <div class="partners-flex-text">
-                        Обсудите детали с нашим специалистом и оплатите заказ
-                    </div>
-                </div>
-                <div class="partners-flex-item">
-                    <span>2</span>
-                    <div class="partners-flex-text">
-                        Получите продукцию и консультацию специалистов по укладке
-                    </div>
-                </div>
-                <div class="partners-flex-item">
-                    <span>3</span>
-                    <div class="partners-flex-text">
-                        Получите 3 года гарантийного и сервисного обслуживания
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="container">
-        <h2 class="title-page-item">6 ключевых преимуществ резиновых покрытий</h2>
-        <div class="flex-advantages">
-            <div class="flex-advantages-item">
-                <div class="flex-advantages-item-block">
-                    <h4>Высокая износостойкость</h4>
-                    <p>Устойчивость к истиранию и ударным нагрузкам, не подвергается деформации</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Термостойкость</h4>
-                    <p>Устойчивость к высоким перепадам температур</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Отсутствие запаха</h4>
-                    <p>Высокое качество связующего, что гарантирует полное отсутствие запаха</p>
-                </div>
-            </div>
-            <div class="flex-advantages-item">
-                <img src="images/adv.jpg" alt="">
-            </div>
-            <div class="flex-advantages-item">
-                <div class="flex-advantages-item-block">
-                    <h4>Амортизирующие свойства</h4>
-                    <p>Имеет отличные амортизирующие свойства, снижает нагрузку на суставы спортсменов</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Срок службы от 10 лет</h4>
-                    <p>Уникальные свойства резинового и EPDM гранулята определяют продолжительность срока службы
-                        покрытия</p>
-                </div>
-                <div class="flex-advantages-item-block">
-                    <h4>Стабильность ширины и толщины</h4>
-                    <p>Контролируемая технология обеспечивает неизменность ширины и толщины среза по всей площади
-                        полотна</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="container">
-        <h2 class="title-page-item">Контакты</h2>
-        <div class="main-page-contacts">
-            <div class="map-block">
-                <script type="text/javascript" charset="utf-8" async
-                    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaa28be4ddb3034f6773bb9dd63d60b96d86611426cb1a48404072f6d97743e9f&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-            </div>
-            <div class="contact-block">
-                <h3>ООО «АЗБУКА ПОКРЫТИЙ»</h3>
-                <p>Напольные покрытия от производителя</p>
-                <p><i class="fa-solid fa-location-dot"></i> 305023, РФ, г Курск, ул Литовская, дом 12А, офис
-                    407</p>
-                <p><a href="tel:+79155103672"><i class="fa-solid fa-square-phone"></i> +7 (915)
-                        510-36-72</a></p>
-                <p><a href="mailto:ekopokrytia@yandex.ru"><i class="fa-solid fa-envelope"></i>
-                        ekopokrytia@yandex.ru</a>
-                </p>
-                <p><a href="https://azbuka46.ru/"><i class="fa-solid fa-user"></i>
-                        https://azbuka46.ru</a></p>
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Оставить
-                    заявку</button>
-            </div>
-        </div>
-    </section>
 
-
-
+    </section>
 
     <footer class="footer-page">
         <div class="container">
