--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
                     <span class="pages__href">example.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_orange">
+                <a href="croshka.html" target="_blank">
+                    <span class="pages__name">Резиновая крошка</span>
+                    <span class="pages__href">croshka.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="epdm.html" target="_blank">
+                    <span class="pages__name">ЭПДМ гранулят</span>
+                    <span class="pages__href">epdm.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
