--- a/blackchip.html
+++ b/blackchip.html
@@ -144,52 +144,74 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Резиновая крошка</h1>
+                    <h1>Черная резиновая крошка</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                <li class="breadcrumb-item"><a href="#">Каталог</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Резиновая крошка</li>
-            </ol>
-        </nav>
-        <div class="main-flex-catalog">
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="epdm.html"><img alt="" src="images/catalog11.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="epdm.html">ЭПДМ гранулят</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
-                            деформациям (эластичностью).</p>
-                    </div>
-                </div>
-                <a href="epdm.html" class="page-btn">Перейти</a>
+        <div class="good-main-desk">
+            <div class="overlay-block"></div>
+            <div class="text-images-good">
+                <p>Резиновая крошка - вторичный продукт переработки автомобильных шин. Она эластичная и достаточно
+                    легкая. Производится путем дробления автомобильных покрышек.</p>
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="blackchip.html"><img alt="" src="images/croshka.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="blackchip.html">Черная резиновая крошка</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Вторичный продукт переработки автомобильных шин. Она эластичная и достаточно легкая. </p>
-                    </div>
-                </div>
-                <a href="blackchip.html" class="page-btn">Перейти</a>
+
+        </div>
+        <div class="good-item-pages">
+            <div class="good-item-page-img">
+                <img src="images/black.jpg" title="Черная резиновая крошка" alt="Черная резиновая крошка">
             </div>
+            <div class="cart-tab-property-title">
+                Достоинства покрытия из резиновой крошки
+            </div>
+            <div class="cart-tab-property-number list-goods-page">
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Долговечность, прочность и
+                        износостойкость на истирание.</span>
+                    Резина по своим качествам устойчива к механическим и химическим воздействиям, при деформации
+                    восстанавливает форму, хорошо выдерживает длительную нагрузку. Летом в жару такая площадка не
+                    перегреется и не начнет плавится, как бывает с некоторыми видами асфальта. Запах резины, который
+                    ощущается в процессе укладки, скоро уходит и при нагреве не возникает.
+                </p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Безопасность территории.</span>
+                    Покрытие из резиновой крошки
+                    обладает эластичностью, благодаря которой детские площадки становятся менее травматичными, на них
+                    ниже вероятность поскользнуться и серьезно удариться. Дети могут падать и не опасаться пораниться,
+                    охотно бегают и прыгают на пружинящей дорожке.</p>
+
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Практичность.</span> Этот материал
+                    долго не выцветает, не портится
+                    от солнца и воды, не трескается от мороза, не дает прорастать траве. Проблема многих садовых
+                    покрытий — сорняки, которые пробиваются сквозь плитку, бетон или щебенку, на них появляются трещины,
+                    материал разрушается. Уложив резиновую дорожку, можно забыть о борьбе за чистоту территории.</p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Легкость в уходе.</span> Резиновое
+                    покрытие хорошо моется, не
+                    требует использования специальных химичексих моющих средств. Небольшие площади достаточно окатить
+                    водой из шланга. Резина не впитывает грязь и пыль. В слякоть на таком покрытии не будут застаиваться
+                    лужи, так как вода просочится и уйдет в землю.</p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Шумопоглощение.</span> Эластичное
+                    покрытие гасит звуки, обладает
+                    электроизоляционными свойствами, не накапливает статическое электричество. Такие дорожки не стучат
+                    под каблуками, не дают шумящего звука от шин автомобиля. Дорожные покрытия на шоссе с использованием
+                    резиновой крошки не создают шума в салоне автомобиля.</p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Эстетичность.</span> Благодаря
+                    краске, которая входит в состав
+                    покрытия, дорожке или площадке можно придать множество разных цветов. Если площадь позволяет,
+                    дизайнеры создают из резиновой крошки целые картины. Каждый человек способен, используя плитку из
+                    этого материала, придумать и создать на своем участке орнамент или узор.</p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">Экологичность.</span> Вторичная
+                    переработка старых покрышек
+                    устраняет необходимость в дополнительных полигонах для их утилизации, помогает поддерживать экологию
+                    и снижать уровень загрязнения окружающего мира.</p>
+            </div>
+
+        </div>
+        <div class="clearfix"></div>
+        <div class="title-page-item">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                консультацию</button>
         </div>
     </section>
-
 
     <footer class="footer-page">
         <div class="container">
