--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                     <span class="pages__href">epdm.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_orange">
+                <a href="blackchip.html" target="_blank">
+                    <span class="pages__name">Черная резиновая крошка</span>
+                    <span class="pages__href">blackchip.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
