--- a/azbuka46.html
+++ b/azbuka46.html
@@ -217,17 +217,17 @@
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog12.jpg"></a>
+                        <a href="tile.html"><img alt="" src="images/catalog12.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Резиновая плитка</a>
+                        <a href="tile.html">Резиновая плитка</a>
                     </div>
                     <div class="main-catalog-description">
                         <p>Конструкционный материал, обладающий уникальным свойством, способностью к большим обратимым
                             деформациям (эластичностью).</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
+                <a href="tile.html" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
