--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                     <span class="pages__href">blackchip.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_orange">
+                <a href="tile.html" target="_blank">
+                    <span class="pages__name">Резиновая плитка</span>
+                    <span class="pages__href">tile.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
