--- a/tile.html
+++ b/tile.html
@@ -269,10 +269,6 @@
                     </tbody>
                 </table>
             </div>
-            <div class="title-page-item">
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
-                    консультацию</button>
-            </div>
             <h2 class="title-page-item">Варианты цветов покрытия</h2>
             <div class="portfolio-page-block colors-flex-block">
                 <div class="portfolio-block-item">
@@ -379,6 +375,10 @@
                     </tbody>
                 </table>
             </div>
+            <div class="title-page-item">
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Оставить
+                    заявку</button>
+            </div>
             <div class="good-item-page-img">
                 <img src="images/plitka-sport.jpg" title="Резиновая плитка" alt="Резиновая плитка">
             </div>
@@ -399,6 +399,7 @@
                     временного.</p>
             </div>
             <div class="clearfix"></div>
+            <h2 class="title-page-item">Прайс-лист</h2>
             <div class="table-mobile-scroll">
                 <table class="table-price">
                     <tbody>
@@ -474,6 +475,164 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <h2 class="title-page-item">Варианты цветов покрытия</h2>
+            <div class="portfolio-page-block colors-flex-block">
+                <div class="portfolio-block-item">
+                    <a href="images/color1.png" data-fancybox="gallery">
+                        <img src="images/color1.png" alt="">
+                    </a>
+                    <div class="title-color">Зеленый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color2.png" data-fancybox="gallery">
+                        <img src="images/color2.png" alt="">
+                    </a>
+                    <div class="title-color">Терракотовый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color3.png" data-fancybox="gallery">
+                        <img src="images/color3.png" alt="">
+                    </a>
+                    <div class="title-color">Желтый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color4.png" data-fancybox="gallery">
+                        <img src="images/color4.png" alt="">
+                    </a>
+                    <div class="title-color">Оранжевый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color5.png" data-fancybox="gallery">
+                        <img src="images/color5.png" alt="">
+                    </a>
+                    <div class="title-color">Синий</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color6.png" data-fancybox="gallery">
+                        <img src="images/color6.png" alt="">
+                    </a>
+                    <div class="title-color">Коричневый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color7.png" data-fancybox="gallery">
+                        <img src="images/color7.png" alt="">
+                    </a>
+                    <div class="title-color">Серый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color8.png" data-fancybox="gallery">
+                        <img src="images/color8.png" alt="">
+                    </a>
+                    <div class="title-color">Черный</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color9.jpg" data-fancybox="gallery">
+                        <img src="images/color9.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix оранжевый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color10.jpg" data-fancybox="gallery">
+                        <img src="images/color10.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix синий</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color11.jpg" data-fancybox="gallery">
+                        <img src="images/color11.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix красный</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color12.jpg" data-fancybox="gallery">
+                        <img src="images/color12.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix фиолетовый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color13.jpg" data-fancybox="gallery">
+                        <img src="images/color13.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix зеленый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color14.jpg" data-fancybox="gallery">
+                        <img src="images/color14.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix серый</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color15.jpg" data-fancybox="gallery">
+                        <img src="images/color15.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix голубой</div>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/color16.jpg" data-fancybox="gallery">
+                        <img src="images/color16.jpg" alt="">
+                    </a>
+                    <div class="title-color">Mix желтый</div>
+                </div>
+            </div>
+            <h2 class="title-page-item">Характеристики покрытия</h2>
+            <div class="table-mobile-scroll">
+                <table class="table-price">
+                    <tbody>
+                        <tr>
+                            <td class="bold-text">№</td>
+                            <td class="bold-text">Показатель</td>
+                            <td class="bold-text">Значение</td>
+                            <td class="bold-text">Комментарий</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Плотность</td>
+                            <td>1100-1150 кг/м3</td>
+                            <td>Метод определения ГОСТ 267-73</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Твердость</td>
+                            <td>75-80 ед.</td>
+                            <td>Метод определения ГОСТ 263-75</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Отклонение размеров</td>
+                            <td>±0,5%</td>
+                            <td>ГОСТ 7338-90</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Прочность на разрыв</td>
+                            <td>1,4-1,5 МПа</td>
+                            <td>Метод определения ГОСТ 270-75</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Деформация сжатия</td>
+                            <td>40-45%</td>
+                            <td>Метод определения ГОСТ 265-77</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Химическая устойчивость</td>
+                            <td>устойчиво</td>
+                            <td>Бензины, минеральные масла, соли</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Пожарная безопасность</td>
+                            <td>Г2; В2; Д2; Т2;</td>
+                            <td>Класс пожарной опасности - КМ3</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="title-page-item">
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Оставить
+                    заявку</button>
             </div>
     </section>
 
